5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1643_2703.log
== TEST (2019-04-05 22:38:10) 
-- CODE:
num = int(input())

if (num % 12 == 0):
	eleitor= "par"
else:
	nao eleitor = "impar"
print(eleitor)
-- ERROR:
File "XXXX", line 6
    nao eleitor = "impar"
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 22:38:10) 
-- CODE:
num = int(input())

if (num % 12 == 0):
	eleitor= "par"
else:
	nao eleitor = "impar"
print(eleitor)
-- ERROR:
File "XXXX", line 6
    nao eleitor = "impar"
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 22:38:15) 
-- CODE:
num = int(input())

if (num % 12 == 0):
	eleitor= "par"
else:
	nao eleitor = "impar"
print(eleitor)
-- ERROR:
File "XXXX", line 6
    nao eleitor = "impar"
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 22:38:39) 
-- CODE:
num = int(input())

if (num % 12 == 0):
	eleitor= "par"
else:
	eleitor = "impar"
print(eleitor)
-- OUTPUT:
impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 22:39:47) 
-- CODE:
num = int(input(qual a idade:))

if (num % 12 == 0):
	eleitor= "par"
else:
	eleitor = "impar"
print(eleitor)
-- ERROR:
File "XXXX", line 1
    num = int(input(qual a idade:))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 22:39:56) 
-- CODE:
num = int(input(qual a idade:))

if (num % 12 == 0):
	eleitor= "par"
else:
	eleitor = "impar"
print(eleitor)
-- EXECUTION TIME:
0.126652
-- ERROR:
  File "/home/codebench/codes/1643/2703/main.py", line 1
    num = int(input(qual a idade:))
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:15:47) 
-- CODE:
num = int(input(qual a idade:))

if (num % 12 == 0):
	eleitor= "par"
else:
	nao_eleitor = "impar"
print(eleitor)
-- EXECUTION TIME:
0.166944
-- ERROR:
  File "/home/codebench/codes/1643/2703/main.py", line 1
    num = int(input(qual a idade:))
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:15:57) 
-- CODE:
num = int(input(qual a idade:))

if (num % 12 == 0):
	eleitor= "par"
else:
	nao_eleitor = "Impar"
print(eleitor)
-- EXECUTION TIME:
0.143956
-- ERROR:
  File "/home/codebench/codes/1643/2703/main.py", line 1
    num = int(input(qual a idade:))
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:18:51) 
-- CODE:
num = int(input(qual a idade:))

if (num % 12 == 0):
	eleitor= "par"
else:
	nao_eleitor = "impar"
print(eleitor)
-- ERROR:
File "XXXX", line 1
    num = int(input(qual a idade:))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:19:21) 
-- CODE:
num = float(input(qual a idade:))

if (num % 12 == 0):
	eleitor= "par"
else:
	nao_eleitor = "impar"
print(eleitor)
-- ERROR:
File "XXXX", line 1
    num = float(input(qual a idade:))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:21:01) 
-- CODE:
eleitor = float(input("qual a idade":))
nao-eleitor=int(input("qual a  idade":))
if (num % 12 == 0):
	eleitor= "par"
else:
	nao_eleitor = "impar"
print(eleitor)
-- ERROR:
File "XXXX", line 1
    eleitor = float(input("qual a idade":))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:28:48) 
-- CODE:
eleitor = int(input("qual a idade":))
if (num<=18 ):
	eleitor= "eleitor"
else:
	eleitor = "nao_eleitor"
print(eleitor)
-- ERROR:
File "XXXX", line 1
    eleitor = int(input("qual a idade":))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:30:05) 
-- CODE:
eleitor = input(int("qual a idade":))

if (num<=18 ):
	eleitor= "eleitor"
else:
	eleitor = "nao_eleitor"
print(eleitor)
-- ERROR:
File "XXXX", line 1
    eleitor = input(int("qual a idade":))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:30:24) 
-- CODE:
eleitor = int(input("qual a idade:"))

if (num<=18 ):
	eleitor= "eleitor"
else:
	eleitor = "nao_eleitor"
print(eleitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (num<=18 ):
NameError: name 'num' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:31:26) 
-- CODE:
eleitor = int(input("qual a idade:"))

if (eleitor<=18 ):
	eleitor= "eleitor"
else:
	eleitor = "nao_eleitor"
	
print(eleitor)
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:31:36) 
-- CODE:
eleitor = int(input("qual a idade:"))

if (eleitor<=18 ):
	eleitor= "eleitor"
else:
	eleitor = "nao_eleitor"
	
print(eleitor)
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:32:00) 
-- CODE:
eleitor = int(input("qual a idade:"))

if (eleitor=>18 ):
	eleitor= "eleitor"
else:
	eleitor = "nao_eleitor"
	
print(eleitor)
-- ERROR:
File "XXXX", line 3
    if (eleitor=>18 ):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:32:23) 
-- CODE:
eleitor = int(input("qual a idade:"))

if (eleitor >=18 ):
	eleitor= "eleitor"
else:
	eleitor = "nao_eleitor"
	
print(eleitor)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:32:32) 
-- CODE:
eleitor = int(input("qual a idade:"))

if (eleitor >=18 ):
	eleitor= "eleitor"
else:
	eleitor = "nao_eleitor"
	
print(eleitor)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:32:47) 
-- CODE:
eleitor = int(input("qual a idade:"))

if (eleitor >=18 ):
	eleitor= "eleitor"
else:
	eleitor = "nao_eleitor"
	
print(eleitor)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:33:07) 
-- CODE:
eleitor = int(input("qual a idade:"))

if (eleitor >=18 ):
	eleitor= "eleitor"
else:
	eleitor = "nao_eleitor"

print(eleitor)
-- EXECUTION TIME:
0.194372
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
